# QWaveBox

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFFMPEG.cmake  FindSDL2.cmake  FindSDL2_Image.cmake
src/: QWaveBox.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediacontrolwidget.cpp  mediacontrolwidget.h  playlistmanager.cpp  playlistmanager.h  resources.qrc  videoplayer.cpp  videoplayer.h
src/core/: appcontext.cpp  appcontext.h  appdata.cpp  appdata.h  application.cpp  application.h  constants.h  shortcutmanager.cpp  shortcutmanager.h
src/gui/: clickmovableslider.cpp  clickmovableslider.h  filelistmodel.cpp  filelistmodel.h  filelistview.cpp  filelistview.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  playlistmodel.cpp  playlistmodel.h  playlistview.cpp  playlistview.h  playlistwidget.cpp  playlistwidget.h  playlistwidget.ui  sdlwidget.cpp  sdlwidget.h  titlebar.cpp  titlebar.h  titlebar.ui  videowidget.cpp  videowidget.h  videowidget.ui
src/play/: audiodecodethread.cpp  audiodecodethread.h  audiorenderthread.cpp  audiorenderthread.h  avframequeue.cpp  avframequeue.h  avpacketqueue.cpp  avpacketqueue.h  avsync.h  demuxthread.cpp  demuxthread.h  renderthread.cpp  renderthread.h  syncdata.h  syncthread.cpp  syncthread.h  threadbase.cpp  threadbase.h  threadmanager.cpp  threadmanager.h  videodecodethread.cpp  videodecodethread.h
src/resources/: black.qss
src/resources/iconFont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/utils/: common.cpp  common.h
